Increased size, fixed alignment and improved display on phones

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,21 +1,21 @@
 .board {
-	width: 10em;
-	margin: 15em auto 0 auto;
+	width: 15em;
+	margin: 15% auto 0 auto;
 	box-sizing: border-box;
 	text-align: center;
 }
 
 .row {
+	width: 100%;
 	display: block;
 	min-width: 100%;
 	min-height: 2em;
 	box-sizing: border-box;
 	padding: 0;
-	margin: 0;
-	text-align: justify;
 }
 
 .cell {
+	font-size: 150%;
 	display: inline-block;
 	width: 3em;
 	min-height: 100%;
@@ -28,15 +28,15 @@
 
 .victoryDiv {
 	height: 20px;
-	margin-right: 15px;
+	font-size: 150%;
 }
 
 .victoryMessage {
 	display: inline-block;
 	position: relative;
-	bottom: 5px;
+	bottom: 20px;
 }
 
 .reset {
-	margin-right: 15px;
+	font-size: 150%;
 }
